--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,26 @@
 <!doctype html>
 <html>
   <head>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">      <link rel="stylesheet" href="./style.css"></link>      
+      <style type="text/css">
+        
+        label:after {
+          content: ": ";
+        }
+        
+        li {
+          margin-top: 4px;
+          margin-bottom: 4px;
+        }
+        label {
+          margin-top: 4px;
+          margin-bottom: 4px;
+        }
+        </style>
   </head>
   <body>
     <div id="app"></div>
+    <img src=""> 
     <script async defer src="/bundle.js"></script>    
   </body>
 </html> 
